[tool.poetry]
name = "duka"
version = "0.1.0"
description = "A microservice that has the main logic for Duka project"
authors = ["Mohamed Nesredin <mohamednesredin19@gmail.com>"]
license = "BSD-3"
readme = "README.md"
homepage = "example.com"
documentation = ""
repository = "https://github.com/Mohamed-Kaizen/duka/tree/master/microservices/duka"
keywords = ["duka"]


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68"
uvicorn = {extras = ["standard"], version = "^0.15"}
email-validator = "^1.1"
orjson = "^3.6"
loguru = "^0.5.3"
httpx = "^0.19.0"
phonenumbers = "^8.12.36"
python-graphql-client = "^0.4.3"
fastapi-jwt-auth = "^0.5.0"
redis = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
darglint = "^1.8"
flake8 = "^3.9"
flake8-annotations = "^2.6"
flake8-bandit = "^2.1"
flake8-black = "^0.2"
flake8-bugbear = "^21.4"
flake8-docstrings = "^1.6"
flake8-import-order = "^0.18"
isort = "^5.9"
radon = "^5.1"
mypy = "^0.910"
safety = "^1.10"

[tool.isort]
profile="black"

[tool.coverage.paths]
source = ["src", "*/site-packages"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
